--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: ruby
 script: rspec
 bundler_args: --without development
 rvm:
-  - 1.9.3
   - 2.0.0
-  - jruby-19mode
+  - 2.2.2
+  - jruby-9.0.0.0
 
   ## jruby-head has some issues on travis, here the error:
   ## The command "rvm install jruby-head --binary" failed and exited with 1 during setup.
